css/style.css
*{
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}
body {
    -webkit-animation: fadein 1s;
    -moz-animation: fadein 1s;
    animation: fadein 1s;
    background: #333;
}
ol, ul {
    list-style: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}
h1, h2, h3, h4, h5, h6 {
    color: orange;
    margin-bottom: 10px;
}
h1 {
    font-size: 2rem;
}
h2 {
    font-size: 1.8rem;
}
h3 {
    font-size: 1.6rem;
}
h4 {
    font-size: 1.4rem;
}
h5 {
    font-size: 1.2rem ;
}
h6 {
    font-size: 1rem;
}
section{
    margin-bottom: 10px;
}
.clearfix:after {
    content: ".";
    visibility: hidden;
    display: block;
    height: 0;
    clear: both;
}
p{
    color: #FFF;
    line-height: 1.2em;
    margin-bottom: 20px;
}
#site-container {
    overflow: auto;
}
#main-content{
    margin: 0 auto;
    padding-top: 60px;
    width: 65%;
}
/* HEADER */
header {
    background: #333;
    position: fixed;
    transition: 500ms ease all;
    -webkit-transition: 500ms ease all;
    width: 100%;
    z-index: 10;
}
.nav-open header {
    transform: translateX(25%);
    transform: translate3d(25%, 0, 0);
    -webkit-transform: translateX(25%);
    -webkit-transform: translate3d(25%, 0, 0);
}
header button {
    background: #333;
    border: none;
    color: #FFF;
    display: block;
    font-size: 2.2rem;
    padding-top: 5px;
    text-align: center;
    width: 50px;
    height: 50px;
}
header button:hover,
header button:focus{
    color: #333;
    background: orange;
    -moz-transition:
        background .2s .1s,
        color .2s .1s;
    -webkit-transition:
        background .2s .1s,
        color .2s .1s;
    transition:
        background .2s .1s,
        color .2s .1s;
}
/* NAVIGATION */
.nav-container{
    background: #555;
    height: 100vh;
    left: -25%;
    position: fixed;
    width: 25%;
    transition: 500ms ease all;
    -webkit-transition: 500ms ease all;
    opacity: 0;
}
.nav-open .nav-container {
    transform: translateX(100%);
    transform: translate3d(100%, 0, 0);
    -webkit-transform: translateX(100%);
    -webkit-transform: translate3d(100%, 0, 0);
    opacity: 1;
}
.nav-container ul{
    padding: 0;
    margin: 0;
}
.nav-container li{
    margin: 0;
}
.nav-container a:before{
    color: orange;
    margin-right: 10px;
}
.nav-container .home:before {
    content: '\f015';
    font-family: 'FontAwesome';
}
.nav-container .briefcase:before {
    content: '\f0b1';
    font-family: 'FontAwesome';
}
.nav-container .code:before {
    content: '\f121';
    font-family: 'FontAwesome';
}
.nav-container a {
    border-bottom: 5px solid #555;
    color: #FFF;
    display: block;
    font-size: 1.5em;
    padding: 10px 5px;
    width: 100%;
}
.nav-container a:hover,
.nav-container a:focus,
.nav-container .selected{
    background: #333;
    border-bottom: 5px solid orange;
    color: orange;
    text-decoration: none;
}
.site-section{
    height: 100vh;
    -webkit-transition: 500ms ease all;
    transition: 500ms ease all;
}
.nav-open .site-section {
    transform: translateX(25%);
    transform: translate3d(25%, 0, 0);
    -webkit-transform: translateX(25%);
    -webkit-transform: translate3d(25%, 0, 0);
}
.overlay {
    background: #000;
    height: 100vh;
    position: absolute;
    right: 0;
    z-index: 1000;
    opacity: 0;
}

/* MISC */
.rounded-img {
    width: 200px;
    border-radius: 50%;
    background: #555;
    padding: 7px;
    margin: 10px 0;
}

/* HOME */
.home h1{
    font-size: 4rem;
}
.home h1+p{
    font-size: 2rem;
}
.resume{
    color: #FFF;
}
.resume:hover,
.resume:focus{
    color: #FFF;
    text-decoration: none;
}
.resume:before{
    color: orange;
    content: "\f019";
    font-family: "FontAwesome";
    font-size: 4em;
}

/* PORTFOLIO - SECTION */
.portfolio-section button {
    background: #555;
    border: none;
    margin-bottom: 10px;
    padding: 0;
    text-decoration: none;
}
.portfolio-section button:hover,
.portfolio-section button:focus{
    background: orange;
    -moz-transition:
        background .2s .1s;
    -webkit-transition:
        background .2s .1s;
    transition:
        background .2s .1s;
}
.portfolio-section button:after{
    content: '';
    -moz-transition:
        background .2s .1s;
    -webkit-transition:
        background .2s .1s;
    transition:
        background .2s .1s;
}
.portfolio-section button:hover:after,
.portfolio-section button:focus:after {
    background: orange;
    bottom: 51px;
    content: '';
    height: 10px;
    position: absolute;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    width: 10px;
}
.portfolio-section .frame {
    background: inherit;
    padding: 7px;
    
}
.portfolio-section .frame + p{
    background: #333;
    margin: 0;
    padding: 15px;
}
.portfolio-section .frame:hover {
    background: inherit;
}
.portfolio-section .frame .content{
    overflow: hidden;
    max-height: 200px;
}
.portfolio-details {
    overflow-y: auto;
}

/* SOCIAL-CODING */
.social-coding-items{
    vertical-align: top;
}
.social-coding a{
    background: #555; /*#A5A5A5;*/
    border-radius: 50%;
    color: #FFF;
    display: block;
    margin: 10px auto;
    padding: 25px;
    width: 150px;
}
.social-coding a:hover,
.social-coding a:focus{
    background: orange;
    color: #333;
    -moz-transition:
        background .2s .1s,
        color .2s .1s;
    -webkit-transition:
        background .2s .1s,
        color .2s .1s;
    transition:
        background .2s .1s,
        color .2s .1s;
}
.font-icons{
    font-size: 7em;
    color: inherit;
}
/* CSS that spans across multiple pages */
.home, .portfolio, .social-coding, .font-icons, .portfolio-details {
    -webkit-animation: fadein 1s;
    -moz-animation: fadein 1s;
    animation: fadein 1s;
}
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}
@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.portfolio-section .col-xs-3,
.social-coding .col-xs-3 {
    float: none;
    display: inline-block;
    width: inherit;
}

/* FOOTER */
.copyright{
    color: #555;
}

/* MODAL */
.modal h1,
.modal h1 a,
.modal p {
    color: #000;
}

/* MEDIA QUERIES */
@media (max-width: 30.69rem){ /* 491px */
    .nav-container {
        left: -50%;
        width: 50%;
    }
    .nav-open header, .nav-open .site-section {
        transform: translateX(50%);
        transform: translate3d(50%, 0, 0);
        -webkit-transform: translateX(50%);
        -webkit-transform: translate3d(50%, 0, 0);
    }
    .overlay {
        width: 50%;
    }
}
/* No greater than 687px, no less than 492px */
@media (max-width: 42.94rem) and (min-width: 30.75rem){ 
    .nav-container {
        left: -35%;
        width: 35%;
    }
    .nav-open header, .nav-open .site-section {
        transform: translateX(35%);
        transform: translate3d(35%, 0, 0);
        -webkit-transform: translateX(35%);
        -webkit-transform: translate3d(35%, 0, 0);
    }
    .overlay{
        width: 65%
    }
}
@media (min-width: 56.25rem){ /* 900px */
    .modal-dialog{
        width: 900px;
    }
}
@media (max-width: 64rem){ /* 1024px */
    #main-content{
        width: 85%;
    }
}
@media (min-width: 100rem){ /* 1600px */
    #main-content{
        width: 70%;
    }
}

